<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kah.fict.MacrosCalculator"
    android:background="@drawable/coffeetable"
    >

    <ImageView
        android:id="@+id/whiteBackground"
        android:layout_width="500dp"
        android:layout_height="580dp"
        android:alpha=".9"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_light" />

    <ImageView
        android:id="@+id/blackBar"
        android:layout_width="486dp"
        android:layout_height="44dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:alpha=".7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableBackground"
        app:srcCompat="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Personalize your goals"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Weight (lbs)"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHeight" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="cm"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAge" />

<!--    <EditText-->
<!--        android:id="@+id/editHeightInch"-->
<!--        android:layout_width="91dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:hint="Inches"-->
<!--        android:inputType="numberDecimal"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@+id/editHeight"-->
<!--        app:layout_constraintHorizontal_bias="0.744"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent" />-->

    <EditText
        android:id="@+id/editAge"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="Age (yr)"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:backgroundTint="@color/sky_blue"
        android:text="Calculate"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/activeSpinner"
        android:layout_width="195dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

    <Spinner
        android:id="@+id/goalSpinner"
        android:layout_width="195dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeSpinner" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="195dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:text="Age"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editAge"
        app:layout_constraintEnd_toStartOf="@+id/editAge"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:text="Height"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editHeight"
        app:layout_constraintEnd_toStartOf="@+id/editHeight"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:text="Weight"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editWeight"
        app:layout_constraintEnd_toStartOf="@+id/editWeight"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
