...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFood"
        app:layout_constraintVertical_bias="0.745"
        app:srcCompat="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/valueGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="2000"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/valueFood"
...
